--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,12 @@ services:
       - mongo
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        - VITE_API_URL=http://localhost:8000
     ports:
       - "5173:80"
-    environment:
-      - VITE_API_URL=http://localhost:8000
     depends_on:
       - backend
 
