--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,12 +7,22 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+
+# Pass environment variables during build
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN npm run build
 
 # Serve Stage
 FROM nginx:alpine
+
+# Copy built assets
 COPY --from=build /app/dist /usr/share/nginx/html
-# Optional: Custom nginx config if needed for SPA routing (React Router)
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy custom nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
