Made changes for docker files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,13 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies (if any needed for pandas/numpy)
-# RUN apt-get update && apt-get install -y --no-install-recommends gcc python3-dev
+# Install system dependencies needed for casparser[mupdf], pandas/numpy
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    python3-dev \
+    libmupdf-dev \
+    mupdf-tools \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first to leverage cache
 COPY requirements.txt .
