--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build: ./backend
@@ -10,6 +8,9 @@ services:
       - MONGO_DB=mutual_funds
       - SECRET_KEY=change_this_secret_key_in_production
       - CORS_ORIGINS=http://localhost:5173,http://localhost:80
+      - FYERS_APP_ID=DXGLWQ4E2O-100
+      - FYERS_SECRET_KEY=W2N3RYRZMB
+      - FYERS_REDIRECT_URI=http://localhost:8000/api/fyers/callback
     depends_on:
       - mongo
 
