--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017
-      - MONGO_DB=mutual_funds
-      - SECRET_KEY=change_this_secret_key_in_production
-      - CORS_ORIGINS=http://localhost:5173,http://localhost:80
-      - FYERS_APP_ID=DXGLWQ4E2O-100
-      - FYERS_SECRET_KEY=W2N3RYRZMB
-      - FYERS_REDIRECT_URI=http://localhost:8000/api/fyers/callback
+      - MONGO_URI=${MONGO_URI}
+      - MONGO_DB=${MONGO_DB}
+      - SECRET_KEY=${SECRET_KEY}
+      - CORS_ORIGINS=${CORS_ORIGINS}
+      - FYERS_APP_ID=${FYERS_APP_ID}
+      - FYERS_SECRET_KEY=${FYERS_SECRET_KEY}
+      - FYERS_REDIRECT_URI=${FYERS_REDIRECT_URI}
     depends_on:
       - mongo
 
@@ -18,7 +18,7 @@ services:
     build:
       context: ./frontend
       args:
-        - VITE_API_URL=http://localhost:8000
+        - VITE_API_URL=${VITE_API_URL}
     ports:
       - "5173:80"
     depends_on:
